# readability-mini

./: Cargo.toml  README.md
data/: img.html  rel.html  title.html
src/: error.rs  extractor.rs  lib.rs  scorer.rs
tests/: lib.rs
