[package]
name = "readability-mini"
version = "0.4.0"
edition = "2021"
authors = ["Hiroki Kumamoto <kumabook@live.jp>", "Hung-Han Chen <chenhungh@gmail.com>"]
license = "MIT"
homepage = "https://github.com/chenhunghan/readability-mini"
repository = "https://github.com/chenhunghan/readability-mini"
description = "Port of arc90's readability project to rust"
keywords = ["readability"]
categories = []

[dependencies]
regex = "1.10.4"
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
lazy_static = "1.4.0"
